# aoc-2025

./: .gitmodules  Cargo.toml  complete.sh
src/: current.rs  main.rs
src/days/: day_01_1.rs  day_01_2.rs  day_02_1.rs  day_02_2.rs  day_03_1.rs  day_03_2.rs  day_04_1.rs  day_04_2.rs  day_05_1.rs  day_05_2.rs  day_06_1.rs  day_06_2.rs  day_07_1.rs  day_07_2.rs  day_08_1.rs  day_08_2.rs  day_09_1.rs  day_09_2.rs  day_10_1.rs  day_10_2.rs  day_11_1.rs  day_11_2.rs  day_12_1.rs  day_12_2.rs
